# greydio

./: README.md  about.html  contact.html  home.html  package-lock.json  package.json  podcast.html  setup.py
data/: document.js  styles.css
decentralized-streaming/: hardhat.config.js  package-lock.json  package.json  specs.md
decentralized-streaming/cache/: console-history.txt  solidity-files-cache.json
decentralized-streaming/contracts/: StreamingVerification.sol  UploadVerification.sol
decentralized-streaming/scripts/: deploy.js  redeploy.sh  stop_services.sh
electron-audio-streamer/: .gitignore  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
files/about/: data.js  (+1 more)
frontend/: package-lock.json  package.json
greydio-chain/: Cargo.toml  README.md
greydio-chain/crates/cli/: Cargo.toml
greydio-chain/crates/cli/src/: main.rs
greydio-chain/crates/consensus/: Cargo.toml
greydio-chain/crates/consensus/src/: lib.rs
greydio-chain/crates/contracts/: Cargo.toml
greydio-chain/crates/contracts/src/: lib.rs
greydio-chain/crates/crypto/: Cargo.toml
greydio-chain/crates/crypto/src/: lib.rs
greydio-chain/crates/ledger/: Cargo.toml
greydio-chain/crates/ledger/src/: lib.rs
greydio-chain/crates/node/: Cargo.toml
greydio-chain/crates/node/src/: main.rs
greydio-chain/crates/p2p/: Cargo.toml
greydio-chain/crates/rpc/: Cargo.toml
greydio-chain/crates/rpc/src/: lib.rs
greydio-chain/crates/smt/: Cargo.toml
greydio-chain/crates/smt/src/: lib.rs
greydio-chain/crates/types/: Cargo.toml
greydio-chain/crates/types/src/: lib.rs
src/: App.tsx  MicStreamer.tsx
web-app/: package-lock.json  package.json  tsconfig.json  vite.config.ts
(+30 files in other folders)
