[package]
name = "greydio-node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
greydio-smt = { path = "../smt" }
greydio-ledger = { path = "../ledger" }
greydio-rpc = { path = "../rpc" }
greydio-consensus = { path = "../consensus" }
greydio-types = { path = "../types" }
